--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "build": "npm run _build --",
     "cd:public": "cd public &&",
     "check:expired": "find content -name '*.md' | xargs ./scripts/list-expired.pl",
+    "check:collector-sync:lint": "cd scripts/collector-sync && uv run ruff check src/",
+    "check:collector-sync:types": "cd scripts/collector-sync && uv run mypy src/",
+    "check:collector-sync": "cd scripts/collector-sync && uv run pytest",
     "check:filenames": "test -z \"$(npm run -s _ls-bad-filenames)\" || npm run -s _filename-error",
     "check:format": "npm run _check:format && npm run _check:format:nowrap || (echo '[help] Run: npm run fix:format'; exit 1)",
     "check:i18n": "scripts/check-i18n.sh",
@@ -72,6 +75,7 @@
     "diff:check": "npm run _diff:check || (echo; echo 'WARNING: the files above have not been committed'; echo)",
     "diff:fail": "npm run _diff:check || (echo; echo 'ERROR: the files above have changed. Locally rerun `npm run test-and-fix` and commit changes'; echo; exit 1)",
     "fix:all": "npm run all -- $(npm -s run _list:fix:* | grep -Ev \"i18n|${CMD_SKIP:-noop}\")",
+    "fix:collector-sync:lint": "cd scripts/collector-sync && uv run ruff check --fix src/",
     "fix:dict": "scripts/sort-cspell-words.pl .cspell/*.txt && npm run _fix:dict",
     "fix:expired": "npm run -s check:expired -- -q | xargs -r -I {} sh -c 'echo \"Deleting expired file: {}\" && rm {}'",
     "fix:filenames": "npm run _rename-to-kebab-case",
@@ -116,6 +120,7 @@
     "serve:netlify": "npm run _serve:netlify",
     "serve": "npm run serve:hugo --",
     "test-and-fix": "npm run seq -- fix:submodule $(npm -s run _list:fix:for-test-and-fix) $(npm -s run _list:check:for-test-and-fix)",
+    "test:collector-sync": "npm run check:collector-sync && npm run check:collector-sync:types && npm run check:collector-sync:lint",
     "test:only": "npm run check",
     "test": "npm run test:only",
     "update:hugo": "npm install --save-dev --save-exact hugo-extended@latest",
