--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "_hugo": "hugo --cleanDestinationDir",
     "_install:cspell": "npm install -D $(npm run -s _list:cspell)",
     "_install:netlify-cli": "npm list netlify-cli || npm install -O netlify-cli",
-    "_list:check:*": "npm run --loglevel=warn | grep -Ee '^\\s*check:[^:]+$'",
-    "_list:check:for-test-and-fix": "npm -s run _list:check:* | grep -Ev \"i18n|${CMD_SKIP:-noop}\"",
+    "_list:check:*": "npm run --loglevel=warn | grep -Ee '^\\s*check:[^:]+$' | grep -Ev \"check:all|${CMD_SKIP:-noop}\"",
+    "_list:check:for-test-and-fix": "npm -s run _list:check:* | grep -Ev \"collector-sync|i18n\"",
     "_list:cspell": "grep -Ee '^\\s*\"@?cspell' package.json | awk -F: '{print $1}'  | tr -d '\"'",
     "_list:diff-never-empty": "echo README.md && npm run _list:diff --",
+    "_list:diff:all": "(npm run -s _list:diff -- HEAD; git ls-files --others --exclude-standard) | sort -u",
     "_list:diff": "git diff --name-only --diff-filter=AMR",
-    "_list:fix:*": "npm run --loglevel=warn | grep -Ee '^\\s*fix:[^:]+$' | grep -v 'fix:all'",
-    "_list:fix:for-test-and-fix": "npm -s run _list:fix:* | grep -Ev \"i18n|refcache|submodule|${CMD_SKIP:-noop}\"",
+    "_list:fix:*": "npm run --loglevel=warn | grep -Ee '^\\s*fix:[^:]+$' | grep -Ev \"fix:all|${CMD_SKIP:-noop}\"",
+    "_list:fix:for-test-and-fix": "npm -s run _list:fix:* | grep -Ev \"collector-sync|i18n|refcache|submodule\"",
     "_ls-bad-filenames": "find assets content static -name '*_*' ! -name '[_.]*'",
     "_pin:submodule": "scripts/pin-submodules.pl",
     "_prebuild": "npm run seq -- get:submodule cp:spec",
@@ -52,21 +53,22 @@
     "build:production": "npm run _hugo -- --minify",
     "build": "npm run _build --",
     "cd:public": "cd public &&",
-    "check:expired": "find content -name '*.md' | xargs ./scripts/list-expired.pl",
+    "check:all": "npm run seq -- $(npm run -s _list:check:*)",
     "check:collector-sync:lint": "cd scripts/collector-sync && uv run ruff check src/",
     "check:collector-sync:types": "cd scripts/collector-sync && uv run mypy src/",
     "check:collector-sync": "cd scripts/collector-sync && uv run pytest",
+    "check:expired": "find content -name '*.md' | xargs ./scripts/list-expired.pl",
     "check:filenames": "test -z \"$(npm run -s _ls-bad-filenames)\" || npm run -s _filename-error",
     "check:format": "npm run _check:format && npm run _check:format:nowrap || (echo '[help] Run: npm run fix:format'; exit 1)",
     "check:i18n": "scripts/check-i18n.sh",
     "check:links:internal": "npm run _check:links:internal",
     "check:links": "npm run _check:links",
-    "check:markdown": "npx markdownlint-cli2 '*.md' '{content,projects}/**/*.md'",
     "check:markdown:specs": "npx markdownlint-cli2 'tmp/(otel|otlp|semconv)/**/*.md'",
+    "check:markdown": "npx markdownlint-cli2 '*.md' '{content,projects}/**/*.md'",
     "check:registry": "npm run _check:registry -- ",
     "check:spelling": "npx cspell --no-progress -c .cspell.yml content data 'layouts/**/*.md'",
     "check:text": "npm run _check:text -- ",
-    "check": "npm run seq -- $(npm run -s _list:check:*)",
+    "check": "CMD_SKIP=collector-sync npm run check:all",
     "clean": "make clean",
     "code-excerpts:get": "cd tools && dart run build_runner build --delete-conflicting-outputs --output ../tmp/excerpts",
     "code-excerpts:update-docs": "cd tools && dart run code_excerpt_updater --fragment-dir-path ../tmp/excerpts --src-dir-path examples --yaml --write-in-place content",
@@ -74,24 +76,24 @@
     "cp:spec": "scripts/content-modules/cp-pages.sh",
     "diff:check": "npm run _diff:check || (echo; echo 'WARNING: the files above have not been committed'; echo)",
     "diff:fail": "npm run _diff:check || (echo; echo 'ERROR: the files above have changed. Locally rerun `npm run test-and-fix` and commit changes'; echo; exit 1)",
-    "fix:all": "npm run all -- $(npm -s run _list:fix:* | grep -Ev \"i18n|${CMD_SKIP:-noop}\")",
+    "fix:all": "npm run all -- $(npm -s run _list:fix:*)",
     "fix:collector-sync:lint": "cd scripts/collector-sync && uv run ruff check --fix src/",
     "fix:dict": "scripts/sort-cspell-words.pl .cspell/*.txt && npm run _fix:dict",
     "fix:expired": "npm run -s check:expired -- -q | xargs -r -I {} sh -c 'echo \"Deleting expired file: {}\" && rm {}'",
     "fix:filenames": "npm run _rename-to-kebab-case",
-    "fix:format:diff": "npm run _fix:format:diff -- $(npm -s run _list:diff-never-empty)",
+    "fix:format:diff": "npm run _fix:format:diff -- $(npm -s run _list:diff:all)",
     "fix:format:staged": "npx prettier --write --ignore-unknown $(npm -s run _list:diff-never-empty -- --cached)",
     "fix:format": "npm run format; npm run _fix:trailing-spaces",
     "fix:htmltest-config": "scripts/htmltest-config.sh",
-    "fix:i18n:status": "scripts/check-i18n.sh -D",
     "fix:i18n:new": "scripts/check-i18n.sh -n -c HEAD",
+    "fix:i18n:status": "scripts/check-i18n.sh -D",
     "fix:i18n": "npm run seq -- fix:i18n:new fix:i18n:status",
     "fix:markdown": "npm run check:markdown -- --fix && echo '\nTrimming trailing whitespace' && npm run _fix:trailing-spaces",
     "fix:refcache:refresh": "npm run _refcache:prune -- -n ${PRUNE_N:-128}",
     "fix:refcache": "npm run _refcache:prune; npm run check:links",
     "fix:submodule": "npm run pin:submodule",
     "fix:text": "npm run check:text -- --fix",
-    "fix": "npm run all -- $(npm -s run _list:fix:*)",
+    "fix": "CMD_SKIP=i18n npm run fix:all",
     "format": "npm run _check:format -- --write && npm run _check:format:nowrap -- --write",
     "get:submodule": "npm run _get:${GET:-submodule} --",
     "log:build": "npm run build 2>&1 | tee tmp/build-log.txt",
@@ -120,9 +122,10 @@
     "serve:netlify": "npm run _serve:netlify",
     "serve": "npm run serve:hugo --",
     "test-and-fix": "npm run seq -- fix:submodule $(npm -s run _list:fix:for-test-and-fix) $(npm -s run _list:check:for-test-and-fix)",
+    "test:all": "npm run test:base && npm run test:collector-sync",
+    "test:base": "npm run check",
     "test:collector-sync": "npm run check:collector-sync && npm run check:collector-sync:types && npm run check:collector-sync:lint",
-    "test:only": "npm run check",
-    "test": "npm run test:only",
+    "test": "CMD_SKIP=collector-sync npm run test:base",
     "update:hugo": "npm install --save-dev --save-exact hugo-extended@latest",
     "update:packages": "npx npm-check-updates --dep 'prod,dev,optional,peer' -u",
     "update:submodule": "set -x && git submodule update --remote ${DEPTH:- --depth 999} && git submodule foreach 'git fetch $(git remote | tail -1) --tags'"
@@ -190,5 +193,5 @@
     "proseWrap": "always",
     "singleQuote": true
   },
-  "spelling": "cSpell:ignore chalin docsy elemetry htmltest hugo loglevel minisearch netlify nowrap postnetlify prebuild precheck preinstall postbuild postget refcache textlint -"
+  "spelling": "cSpell:ignore chalin docsy elemetry htmltest hugo loglevel minisearch mypy netlify nowrap postnetlify prebuild precheck preinstall postbuild postget pytest refcache textlint -"
 }
