Add otelui to registry (#9296)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "default",
-  "image": "mcr.microsoft.com/devcontainers/base:dev-bullseye",
+  "image": "mcr.microsoft.com/devcontainers/base:dev-bookworm",
   "features": {
     "ghcr.io/devcontainers/features/node:1": {}
   },
